lib/tests/fixtures/compiler/evaluation/invalid_integer_new.pp
notice Integer('1', 10, wrong)
